@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
' use +, \#, - instead of icons for public, protected, private


package pygame {
  class Sprite {
    + update()
  }
  class Clock
  class Sound
}
class Bird extends  GameSprite {
+ {static} Min_Speed : int
+ {static} Max_Speed : int
- speed : int
- time : int
+update()
+ clone() : Bird

}
class Umbrella extends  GameSprite {
+ {static} Min_Speed : int
+ {static} Max_Speed : int
- speed : int
+update()
+ clone() : Umbrella

}
class FactorySprites{
- periods : int[]
- event_types : int[]
+ make(event_type : int[])
}
class GameSprite{
+ clone() : GameSprite
}
class Cloud extends GameSprite {
+update()
+clone() : Cloud
}
class Mountain extends GameSprite {
+update()
+clone() : Mountain
}
class Player  {
- move_up_sound : Sound
- move_down_sound : Sound
+ update(pressed_keys : boolean[])
+ stop_move_sounds()
}

class Game {
- clock : Clock
- screen : Surface
- user_quits : boolean
+ play()

}

Game --> FactorySprites : factory_flying "1"
Game --> FactorySprites : factory_landscape "1"
Game --> GameSprite : flying_sprites "*"
Game --> GameSprite : landscape_sprites "*"

Game --> Player : player "1"
FactorySprites o--> GameSprite : protypes "1..*"
Player --|> Sprite
GameSprite --|> Sprite
Game --> Sprite : all_sprites "1..*"


@enduml